# rustconnect-libp2p

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
docs/: Makefile  README.md  caveats.typ  communication.typ  connection.typ  discovery.typ  ffi.typ  identity.typ  introduction.typ  main.typ  usage.typ
ffi/: Makefile
ffi/src/: libp2p_chat.h  main.c
src/: behaviour.rs  client.rs  external.rs  lib.rs  main.rs
